--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <section id="section_1">
         <div id="profile-picture">
           <img
-            src="../assets/portrait.jpg"
+            src="./assets/portrait.jpg"
             alt="profile photo"
             class="profile_picture"
           />
@@ -79,15 +79,15 @@
             I am always looking for new ways to improve my skills and knowledge.
           </p>
           <div class="about__contacts">
-            <img src="../assets/mail icon.png" alt="mail icon" />
+            <img src="./assets/mail icon.png" alt="mail icon" />
             <p>lucica.iastremschi@gmail.com</p>
-            <img src="../assets/phone icon.png" alt="phone icon" class="push" />
+            <img src="./assets/phone icon.png" alt="phone icon" class="push" />
             <p>+(373) 60116410</p>
           </div>
         </div>
         <div class="second-profile-photo">
           <div class="container_second-profile-photo">
-            <img src="../assets/picture_section2.jpg" alt="" />
+            <img src="./assets/picture_section2.jpg" alt="" />
           </div>
           <div class="container_border-profile-photo"></div>
         </div>
