--- a/index.html
+++ b/index.html
@@ -175,22 +175,22 @@
             <h3 class="space-section_5">Acquired skills:</h3>
             <ul>
               <li>
-                communication skills- the skills to listen, to dialogue and to
+                Communication skills- the skills to listen, to dialogue and to
                 express yourself coherently in writing;
               </li>
               <li>
-                the ability to correctly analyze information and quickly make
+                The ability to correctly analyze information and quickly make
                 the best decisions
               </li>
-              <li>the ability to work well in a team;</li>
+              <li>The ability to work well in a team;</li>
               <li>
-                the ability to prioritize and complete important tasks on time
+                The ability to prioritize and complete important tasks on time
               </li>
               <li>
-                flexibility, the ability to quickly adapt to changes and new
+                Flexibility, the ability to quickly adapt to changes and new
                 contexts;
               </li>
-              <li>technical skills</li>
+              <li>Technical skills</li>
             </ul>
           </div>
         </div>
