--- a/index.html
+++ b/index.html
@@ -186,10 +186,7 @@
               <li>
                 The ability to prioritize and complete important tasks on time
               </li>
-              <li>
-                Flexibility, the ability to quickly adapt to changes and new
-                contexts;
-              </li>
+              <li>The ability to quickly adapt to changes and new contexts;</li>
               <li>Technical skills</li>
             </ul>
           </div>
