--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
+    <header>
+      <h1>Luci</h1>
+    </header>
     <footer>All rights reserved 2023</footer>
   </body>
 </html>
